[package]
name = "aoc2018"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = []

[dependencies]
ahash = "0.7.6"
clap = { version = "3.0.14", features = ["derive"] }
color-eyre = "0.6.0"
eyre = "0.6.6"
itertools = "0.10"
nalgebra = "0.31.0"
recap = "0.1"
serde = "1"
smallvec = "1.8.0"
time = { version = "0.3", features = ["macros", "parsing"] }
tracing = "0.1.30"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benches"
harness = false
